--- a/css/stylus/main.styl
+++ b/css/stylus/main.styl
@@ -12,3 +12,8 @@
 @import 'layout/header.styl'
 // @import 'layout/sidebars.styl'
 @import 'pages/index.styl'
+@import 'pages/login.styl'
+@import 'pages/confirma-cad.styl'
+
+
+@import 'pages/carrinho.styl'
