--- a/css/stylus/pages/index.styl
+++ b/css/stylus/pages/index.styl
@@ -43,9 +43,7 @@
   display: inline-block;
   margin: 23px;
   vertical-align: top;
-  &:hover{
 
-  }
 }
 
   .prod-desc{
@@ -106,14 +104,13 @@
   max-width: 100%;
 
   margin: 0 0 10px 0;
-}&:hover{
+}.card-image:hover{
   border-radius: 10px;
 }
 
 .card-info {
   position: relative;
   > h2 {
-    // padding-right: 50px;
     margin: 0 0 5px 0;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
