--- a/css/main.css
+++ b/css/main.css
@@ -544,7 +544,7 @@ li {
   cursor: pointer;
   transition: 0.3s ease-in-out;
 }
-:hover {
+.right:hover {
   color: #999;
 }
 @media only screen and (max-width: 500px) {
@@ -710,7 +710,7 @@ li {
   max-width: 100%;
   margin: 0 0 10px 0;
 }
-:hover {
+.card-image:hover {
   border-radius: 10px;
 }
 .card-info {
@@ -740,4 +740,422 @@ li {
     margin: 0 auto;
     width: 90%;
   }
+}
+.form-login {
+  width: 100%;
+  margin: 20vh auto;
+  display: block;
+  text-align: center;
+}
+.btn {
+  font-size: 1rem;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  color: #fff;
+  background-color: #303030;
+  padding: 10px 50px;
+  cursor: pointer;
+  transition: ease-in 0.3s;
+  border: 1px solid #303030;
+}
+.btn:hover {
+  background-color: transparent;
+  border: 1px solid #303030;
+  color: #303030;
+}
+input:focus ~ label,
+textarea:focus ~ label,
+input:valid ~ label,
+textarea:valid ~ label {
+  font-size: 1em;
+  color: #303030;
+  top: -2.25rem;
+  -webkit-transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+  transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+.btn a {
+  text-decoration: none;
+  color: #fff;
+}
+.btn a:hover {
+  color: #303030;
+}
+.styled-input {
+  float: none;
+  width: 50%;
+  margin: 2rem 0 1rem;
+  position: relative;
+  margin: 5% auto;
+}
+.styled-input label {
+  color: #999;
+  padding: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
+  transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
+  pointer-events: none;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+.styled-input.wide {
+  width: 100%;
+}
+input,
+textarea {
+  padding: 1rem 1rem;
+  border: 0;
+  width: 100%;
+  font-size: 1rem;
+  border-bottom: 1px solid #303030;
+  background-color: transparent;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+  color: #303030;
+  left: 0;
+  border-left: none;
+  right: 0;
+}
+input ~ span,
+textarea ~ span {
+  display: block;
+  width: 0;
+  height: 3px;
+  background: #303030;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  -webkit-transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+  transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+input:focus,
+textarea:focus {
+  outline: 0;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+input:focus ~ span,
+textarea:focus ~ span {
+  width: 106%;
+  -webkit-transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+  transition: all 0.125s cubic-bezier(0.2, 0, 0.03, 1);
+}
+textarea {
+  width: 100%;
+  min-height: 15em;
+}
+@media only screen and (max-width: 500px) {
+  .c-centered h1 {
+    font-family: georgia;
+    color: #fff;
+    font-size: 28px;
+    font-weight: bolder;
+    margin-top: 15%;
+  }
+  .c-centered {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+  }
+  .styled-input {
+    float: none;
+    width: 75.3333%;
+    margin: 2rem 0 1rem;
+    position: relative;
+    margin: 10% auto;
+  }
+}
+.confirma-cad {
+  text-align: center;
+  margin: 0 auto;
+  display: block;
+}
+.icone {
+  color: #303030;
+  text-align: center;
+  font-size: 3em;
+  margin: 25vh auto 0;
+  display: block;
+}
+.confirma-cad p {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  margin: 3% auto;
+}
+.confirma-cad h1 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+}
+.container-main {
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+}
+#site-header h1:hover span.last-span,
+#site-header h1 span.is-open {
+  left: 363px;
+}
+#site-header h1 em {
+  font-size: 16px;
+  font-style: normal;
+  vertical-align: middle;
+}
+.container {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0 auto;
+  width: 980px;
+}
+#cart {
+  width: 100%;
+}
+#cart h1 {
+  font-weight: 300;
+}
+#cart a {
+  color: #53b5aa;
+  text-decoration: none;
+  -webkit-transition: color 0.2s linear;
+  -moz-transition: color 0.2s linear;
+  -ms-transition: color 0.2s linear;
+  -o-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+#cart a:hover {
+  color: #000;
+}
+.product.removed {
+  margin-left: 980px !important;
+  opacity: 0;
+}
+.product {
+  border: 1px solid #eee;
+  margin: 20px 0;
+  width: 100%;
+  height: 195px;
+  position: relative;
+  -webkit-transition: margin 0.2s linear, opacity 0.2s linear;
+  -moz-transition: margin 0.2s linear, opacity 0.2s linear;
+  -ms-transition: margin 0.2s linear, opacity 0.2s linear;
+  -o-transition: margin 0.2s linear, opacity 0.2s linear;
+  transition: margin 0.2s linear, opacity 0.2s linear;
+}
+.product img {
+  width: 100%;
+  height: 100%;
+}
+.product header,
+.product .content {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-style: none none solid none;
+  float: left;
+}
+.product header {
+  background: #000;
+  margin: 0 1% 20px 0;
+  overflow: hidden;
+  padding: 0;
+  position: relative;
+  width: 24%;
+  height: 195px;
+}
+.product header:hover img {
+  opacity: 0.7;
+}
+.product header:hover h3 {
+  bottom: 73px;
+}
+.product header h3 {
+  background: #53b5aa;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 49px;
+  margin: 0;
+  padding: 0 30px;
+  position: absolute;
+  bottom: -50px;
+  right: 0;
+  left: 0;
+  -webkit-transition: bottom 0.2s linear;
+  -moz-transition: bottom 0.2s linear;
+  -ms-transition: bottom 0.2s linear;
+  -o-transition: bottom 0.2s linear;
+  transition: bottom 0.2s linear;
+}
+.remove {
+  cursor: pointer;
+}
+.product .content {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  height: 140px;
+  padding: 0 20px;
+  width: 75%;
+}
+.product h1 {
+  color: #53b5aa;
+  font-size: 25px;
+  font-weight: 300;
+  margin: 17px 0 20px 0;
+}
+.product footer.content {
+  height: 50px;
+  margin: 6px 0 0 0;
+  padding: 0;
+}
+.product footer .price {
+  background: #fcfcfc;
+  color: #000;
+  float: right;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 49px;
+  margin: 0;
+  padding: 0 30px;
+}
+.product footer .full-price {
+  background: #53b5aa;
+  color: #fff;
+  float: right;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 49px;
+  margin: 0;
+  padding: 0 30px;
+  -webkit-transition: margin 0.15s linear;
+  -moz-transition: margin 0.15s linear;
+  -ms-transition: margin 0.15s linear;
+  -o-transition: margin 0.15s linear;
+  transition: margin 0.15s linear;
+}
+.qt,
+.qt-plus,
+.qt-minus {
+  display: block;
+  float: left;
+}
+.qt {
+  font-size: 19px;
+  line-height: 50px;
+  width: 70px;
+  text-align: center;
+}
+.qt-plus,
+.qt-minus {
+  background: #fcfcfc;
+  border: none;
+  font-size: 30px;
+  font-weight: 300;
+  height: 100%;
+  padding: 0 20px;
+  -webkit-transition: background 0.2s linear;
+  -moz-transition: background 0.2s linear;
+  -ms-transition: background 0.2s linear;
+  -o-transition: background 0.2s linear;
+  transition: background 0.2s linear;
+}
+.qt-plus:hover,
+.qt-minus:hover {
+  background: #53b5aa;
+  color: #fff;
+  cursor: pointer;
+}
+.qt-plus {
+  line-height: 50px;
+}
+.qt-minus {
+  line-height: 47px;
+}
+#site-footer {
+  margin: 30px 0 0 0;
+}
+#site-footer {
+  padding: 40px;
+}
+#site-footer h1 {
+  background: #fcfcfc;
+  border: 1px solid #ccc;
+  border-style: none none solid none;
+  font-size: 24px;
+  font-weight: 300;
+  margin: 0 0 7px 0;
+  padding: 14px 40px;
+  text-align: center;
+}
+#site-footer h2 {
+  font-size: 24px;
+  font-weight: 300;
+  margin: 10px 0 0 0;
+}
+#site-footer h3 {
+  font-size: 19px;
+  font-weight: 300;
+  margin: 15px 0;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+.btn {
+  background: #53b5aa;
+  border: 1px solid #999;
+  border-style: none none solid none;
+  cursor: pointer;
+  display: block;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 300;
+  padding: 16px 0;
+  width: 290px;
+  text-align: center;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.btn:hover {
+  color: #fff;
+  background: #429188;
+}
+.type {
+  background: #fcfcfc;
+  font-size: 13px;
+  padding: 10px 16px;
+  left: 100%;
+}
+.type,
+.color {
+  border: 1px solid #ccc;
+  border-style: none none solid none;
+  position: absolute;
+}
+.color {
+  width: 40px;
+  height: 40px;
+  right: -40px;
+}
+.red {
+  background: #cb5a5e;
+}
+.yellow {
+  background: #f1c40f;
+}
+.blue {
+  background: #3598dc;
+}
+.minused {
+  margin: 0 50px 0 0 !important;
+}
+.added {
+  margin: 0 -50px 0 0 !important;
 }
