--- a/css/main.css
+++ b/css/main.css
@@ -892,270 +892,427 @@ textarea {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
 }
-.container-main {
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  vertical-align: baseline;
+}
+.center-content {
   width: 100%;
-  display: block;
+  max-width: 130em;
   margin: 0 auto;
+  position: relative;
 }
-#site-header h1:hover span.last-span,
-#site-header h1 span.is-open {
-  left: 363px;
+.p-border {
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #d2d2d2;
+  color: #666;
+  margin-bottom: 1.5em;
 }
-#site-header h1 em {
-  font-size: 16px;
-  font-style: normal;
+.product-container {
+  width: 90%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+  margin-top: 5em;
   vertical-align: middle;
+  line-height: 100%;
+  margin-bottom: 1em;
+  background-color: rgba(223,68,11,0.69);
 }
-.container {
-  font-family: 'Open Sans', sans-serif;
-  margin: 0 auto;
-  width: 980px;
-}
-#cart {
-  width: 100%;
-}
-#cart h1 {
-  font-weight: 300;
-}
-#cart a {
-  color: #53b5aa;
-  text-decoration: none;
-  -webkit-transition: color 0.2s linear;
-  -moz-transition: color 0.2s linear;
-  -ms-transition: color 0.2s linear;
-  -o-transition: color 0.2s linear;
-  transition: color 0.2s linear;
-}
-#cart a:hover {
-  color: #000;
-}
-.product.removed {
-  margin-left: 980px !important;
-  opacity: 0;
-}
-.product {
-  border: 1px solid #eee;
-  margin: 20px 0;
-  width: 100%;
-  height: 195px;
-  position: relative;
-  -webkit-transition: margin 0.2s linear, opacity 0.2s linear;
-  -moz-transition: margin 0.2s linear, opacity 0.2s linear;
-  -ms-transition: margin 0.2s linear, opacity 0.2s linear;
-  -o-transition: margin 0.2s linear, opacity 0.2s linear;
-  transition: margin 0.2s linear, opacity 0.2s linear;
-}
-.product img {
-  width: 100%;
-  height: 100%;
-}
-.product header,
-.product .content {
+.product-container ul {
+  width: 95%;
+  list-style: none;
+  border: 1px solid #010101;
+  margin: 4em auto 0;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border-style: none none solid none;
-  float: left;
+  -webkit-box-shadow: 6px 6px 12px -4px rgba(0,0,0,0.7);
+  -moz-box-shadow: 6px 6px 12px -4px rgba(0,0,0,0.7);
+  box-shadow: 6px 6px 12px -4px rgba(0,0,0,0.7);
 }
-.product header {
-  background: #000;
-  margin: 0 1% 20px 0;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-  width: 24%;
-  height: 195px;
+.p-thumb {
+  width: 82px;
+  margin: 3em;
+  display: inline-block;
 }
-.product header:hover img {
-  opacity: 0.7;
+li.p-title {
+  display: inline-block;
+/*width: 33%;*/
+  vertical-align: top;
+  margin: 5em 2em 0;
+  font-size: 1.2em;
+  line-height: 1.1em;
+  color: #5ea20d;
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
 }
-.product header:hover h3 {
-  bottom: 73px;
+.p-descr {
+  display: inline-block;
+  vertical-align: top;
+  margin: 1em 2.2em 0;
+  font-size: 1em;
+  font-family: 'Merriweather', serif;
+  font-weight: 100;
 }
-.product header h3 {
-  background: #53b5aa;
-  color: #fff;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 49px;
-  margin: 0;
-  padding: 0 30px;
-  position: absolute;
-  bottom: -50px;
-  right: 0;
-  left: 0;
-  -webkit-transition: bottom 0.2s linear;
-  -moz-transition: bottom 0.2s linear;
-  -ms-transition: bottom 0.2s linear;
-  -o-transition: bottom 0.2s linear;
-  transition: bottom 0.2s linear;
-}
-.remove {
-  cursor: pointer;
-}
-.product .content {
+.p-box-title {
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  height: 140px;
-  padding: 0 20px;
-  width: 75%;
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
 }
-.product h1 {
-  color: #53b5aa;
-  font-size: 25px;
-  font-weight: 300;
-  margin: 17px 0 20px 0;
+.p-price {
+  width: 10%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 6em auto;
+  font-family: 'Merriweather', serif;
+  font-weight: 500;
+  color: #5ea20d;
 }
-.product footer.content {
-  height: 50px;
-  margin: 6px 0 0 0;
-  padding: 0;
+.p-price p {
+  margin-top: 1em;
 }
-.product footer .price {
-  background: #fcfcfc;
-  color: #000;
-  float: right;
-  font-size: 15px;
-  font-weight: 300;
-  line-height: 49px;
-  margin: 0;
-  padding: 0 30px;
+.p-button {
+  width: 100%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 2em auto;
+  font-family: 'Merriweather', serif;
+  font-weight: 500;
+  color: #5ea20d;
+  text-align: right;
 }
-.product footer .full-price {
-  background: #53b5aa;
+.p-button button {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #18ab29;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 10px 13px;
+  text-decoration: none;
+  margin: 0px 2.5em;
+  border-radius: 20px;
+  background-color: transparent;
+  transition: all 0.2s ease;
+}
+.p-button button:hover {
+  background-color: rgba(24,171,41,0.46);
   color: #fff;
-  float: right;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 49px;
-  margin: 0;
-  padding: 0 30px;
-  -webkit-transition: margin 0.15s linear;
-  -moz-transition: margin 0.15s linear;
-  -ms-transition: margin 0.15s linear;
-  -o-transition: margin 0.15s linear;
-  transition: margin 0.15s linear;
+  padding-right: 1em;
+  padding-left: 1em;
 }
-.qt,
-.qt-plus,
-.qt-minus {
-  display: block;
-  float: left;
+.p-button button:active {
+  position: relative;
+  top: 1px;
 }
-.qt {
-  font-size: 19px;
-  line-height: 50px;
-  width: 70px;
+.p-button button:after {
+  content: "\f055";
+  font-family: FontAwesome;
+  margin-left: 1em;
+}
+.p-quant {
+  width: 10%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 6em auto;
+}
+.spinner {
+  width: 12em;
+}
+.spinner input {
+  width: 3em;
+  height: 3em;
+  margin-left: 7em;
+  border: solid 1px #18ab29;
+  border-radius: 25%;
   text-align: center;
 }
-.qt-plus,
-.qt-minus {
-  background: #fcfcfc;
+.input-group-btn-vertical {
+  position: relative;
+  white-space: nowrap;
+  width: 1%;
+  vertical-align: middle;
+  display: inline-block;
+  display: inline-block;
+  margin: 0 auto;
+}
+.input-group-btn-vertical > .btn {
+  display: block;
+  float: none;
+  width: 100%;
+  max-width: 100%;
+  padding: 1em;
+  margin-left: -1px;
+  position: relative;
+  border-radius: 50%;
+}
+.input-group-btn-vertical > .btn:first-child {
   border: none;
-  font-size: 30px;
-  font-weight: 300;
-  height: 100%;
-  padding: 0 20px;
-  -webkit-transition: background 0.2s linear;
-  -moz-transition: background 0.2s linear;
-  -ms-transition: background 0.2s linear;
-  -o-transition: background 0.2s linear;
-  transition: background 0.2s linear;
-}
-.qt-plus:hover,
-.qt-minus:hover {
-  background: #53b5aa;
-  color: #fff;
-  cursor: pointer;
-}
-.qt-plus {
-  line-height: 50px;
-}
-.qt-minus {
-  line-height: 47px;
-}
-#site-footer {
-  margin: 30px 0 0 0;
-}
-#site-footer {
-  padding: 40px;
-}
-#site-footer h1 {
-  background: #fcfcfc;
-  border: 1px solid #ccc;
-  border-style: none none solid none;
-  font-size: 24px;
-  font-weight: 300;
-  margin: 0 0 7px 0;
-  padding: 14px 40px;
-  text-align: center;
-}
-#site-footer h2 {
-  font-size: 24px;
-  font-weight: 300;
-  margin: 10px 0 0 0;
-}
-#site-footer h3 {
-  font-size: 19px;
-  font-weight: 300;
-  margin: 15px 0;
-}
-.left {
-  float: left;
-}
-.right {
-  float: right;
-}
-.btn {
-  background: #53b5aa;
-  border: 1px solid #999;
-  border-style: none none solid none;
-  cursor: pointer;
+  background-color: #18ab29;
   display: block;
-  color: #fff;
-  font-size: 20px;
-  font-weight: 300;
-  padding: 16px 0;
-  width: 290px;
-  text-align: center;
-  -webkit-transition: all 0.2s linear;
-  -moz-transition: all 0.2s linear;
-  -ms-transition: all 0.2s linear;
-  -o-transition: all 0.2s linear;
-  transition: all 0.2s linear;
+  float: none;
+  width: 100%;
+  max-width: 100%;
+  padding: 1em;
+  margin-left: 0px;
+  position: relative;
+  border-radius: 4px 4px;
+  transition: all 0.2s ease;
 }
-.btn:hover {
-  color: #fff;
-  background: #429188;
+.input-group-btn-vertical > .btn:last-child {
+  margin-top: -2px;
+  border: none;
+  display: block;
+  float: none;
+  width: 100%;
+  max-width: 100%;
+  padding: 1em;
+  margin-left: 0px;
+  position: relative;
+  border-radius: 4px 4px;
+  margin-top: 0.1em;
+  background-color: #18ab29;
+  transition: all 0.2s ease;
 }
-.type {
-  background: #fcfcfc;
-  font-size: 13px;
-  padding: 10px 16px;
-  left: 100%;
+.input-group-btn-vertical > .btn:first-child:hover {
+  border: solid 1px #18ab29;
+  background-color: #fff;
 }
-.type,
-.color {
-  border: 1px solid #ccc;
-  border-style: none none solid none;
+.input-group-btn-vertical > .btn:last-child:hover {
+  border: solid 1px #18ab29;
+  background-color: #fff;
+}
+.input-group-btn-vertical i {
   position: absolute;
+  top: 0.5em;
+  left: 0.7em;
 }
-.color {
-  width: 40px;
-  height: 40px;
-  right: -40px;
+.center-1024 {
+  width: 90%;
+  max-width: 130em;
+  margin: 0 auto;
+  position: relative;
 }
-.red {
-  background: #cb5a5e;
+.input-cep {
+  width: 13em;
+  height: 2.5em;
+  border: solid 1px #18ab29;
+  border-radius: 4px;
+  background-color: #fff;
+  margin: 0 auto;
+  font-family: "Roboto", helvetica, arial, sans-serif;
+  color: rgba(0,0,0,0.7);
 }
-.yellow {
-  background: #f1c40f;
+.c-button {
+  width: 3%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 auto;
+  font-family: 'Merriweather', serif;
+  font-weight: 500;
+  color: #5ea20d;
+  text-align: right;
 }
-.blue {
-  background: #3598dc;
+.c-button button {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #18ab29;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 9px 11px;
+  text-decoration: none;
+  border-radius: 4px;
+  background-color: #fff;
+  transition: all 0.2s ease;
 }
-.minused {
-  margin: 0 50px 0 0 !important;
+.c-button button:hover {
+  background-color: rgba(24,171,41,0.46);
+  color: #fff;
+  padding-right: 1em;
+  padding-left: 1em;
 }
-.added {
-  margin: 0 -50px 0 0 !important;
+.c-button button:active {
+  position: relative;
+  top: 1px;
+}
+.cep-contain {
+  width: 100%;
+  display: block;
+  text-align: right;
+  margin: 0 -2.5em;
+  padding: 2% 0;
+}
+.check-btn {
+  width: 10%;
+  display: inline-block;
+  vertical-align: top;
+  margin: 7em 0.5em auto;
+}
+.faf {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 1.4em;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.fa-check:hover {
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  animation-duration: 0.5s;
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  box-shadow: 0 0 1px rgba(0,0,0,0);
+  color: #0f9e5e;
+  cursor: pointer;
+}
+.fa-times:hover {
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  animation-duration: 0.5s;
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  box-shadow: 0 0 1px rgba(0,0,0,0);
+  color: #da1226;
+  cursor: pointer;
+}
+@media only screen {
+  & (min-device-width : 700px) .spinner input,
+  & (max-device-width : 1024px) .spinner input,
+  & (orientation : portrait) .spinner input {
+    width: 3em;
+    height: 3em;
+    margin-left: 2em;
+    border: solid 1px #18ab29;
+    border-radius: 25%;
+    text-align: center;
+  }
+}
+@media only screen {
+  & (max-width : 1824px) .spinner input {
+    margin-left: 0em;
+  }
+}
+@media only screen {
+  & (min-width : 769px) .p-box-title,
+  & (max-width : 1024px) .p-box-title {
+    width: 35%;
+  }
+  & (min-width : 769px) .check-btn,
+  & (max-width : 1024px) .check-btn {
+    width: 6%;
+    margin: 7em 0em 0em 1em;
+  }
+}
+@media only screen {
+  & (min-width : 1280px) .check-btn,
+  & (max-width : 1440px) .check-btn {
+    width: 5%;
+    display: inline-block;
+    vertical-align: top;
+    margin: 7em 4.5em auto;
+  }
+}
+@media only screen {
+  & (max-width : 768px) .check-btn {
+    width: 100%;
+    display: block;
+    vertical-align: top;
+    margin: 1em auto;
+    text-align: center;
+  }
+  & (max-width : 768px) .p-box-title {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+  & (max-width : 768px) .u-container {
+    width: 100% !important;
+    margin: 0 auto;
+  }
+  & (max-width : 768px) li.p-title {
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+    margin: 1em auto;
+  }
+  & (max-width : 768px) .p-descr {
+    display: inline-block;
+    vertical-align: top;
+    margin: 1em auto;
+    width: 100%;
+  }
+  & (max-width : 768px) .p-price {
+    width: 100%;
+    margin: 1em auto;
+    text-align: center;
+    display: block;
+  }
+  & (max-width : 768px) .p-quant {
+    width: 100%;
+    display: block;
+    vertical-align: top;
+    margin: 1em auto;
+    text-align: center;
+  }
+  & (max-width : 768px) .c-button {
+    width: 3%;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 auto;
+    font-family: 'Merriweather', serif;
+    font-weight: 500;
+    color: #5ea20d;
+    text-align: right;
+  }
+  & (max-width : 768px) .cep-contain {
+    width: 100%;
+    display: block;
+    text-align: center;
+    margin: 1em auto;
+    margin-bottom: 1em;
+  }
+  & (max-width : 768px) .input-cep {
+    margin: 0 auto;
+  }
+  & (max-width : 768px) tr:first-child {
+    border-top: none;
+    width: 100%;
+    margin: 0 auto;
+  }
+  & (max-width : 768px) .spinner input {
+    margin: 0 auto;
+    text-align: center;
+  }
+  & (max-width : 768px) .spinner {
+    width: 100% !important;
+  }
+  & (max-width : 768px) .sml-button button {
+    font-size: 16px;
+    padding: 7px 3px;
+    margin: 0.2em auto;
+  }
+  & (max-width : 768px) .p-thumb {
+    margin: 0 auto;
+    text-align: center;
+    display: block;
+  }
 }
